--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="https://im.ge/i/eduvation-icon.VvoWsq" type="image/x-icon">
+  <link rel="icon" href="https://im.ge/i/eduvation-icon.png" type="image/png">
+  <link rel="icon" href="https://im.ge/i/eduvation-icon.svg" type="image/svg+xml">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React & Tailwind CSS Starter Pack</title>
+  <title>EduVation-Let's Learn</title>
 </head>
 
 <body>
